tests/solidity-semantic-tests/out/errors/errors_by_parameter_type/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/errors_by_parameter_type.sol.C.approval_program() -> uint64:
main:
    txn ApplicationID
    bnz main_after_if_else@2
    pushint 1
    return

main_after_if_else@2:
    pushint 4096
    bzero
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x1e7aad1c 0x3ac90b08 0x8c6966f0 0x29efd0f6 0x277630fc 0x2d4970c7 // method "a()void", method "b()void", method "c()void", method "d()void", method "e()void", method "f()void"
    txna ApplicationArgs 0
    match main_a_route@5 main_b_route@6 main_c_route@7 main_d_route@8 main_e_route@9 main_f_route@10
    err

main_f_route@10:
    err // E5

main_e_route@9:
    err // E4

main_d_route@8:
    err // E3

main_c_route@7:
    err // E2

main_b_route@6:
    err // E1

main_a_route@5:
    err // E
